// Vitest Snapshot v1

exports[`generate components.d.ts 1`] = `
"/* generated by unplugin-react-components */
export {}
declare global{
	const A: typeof import('./A')['A']
	const App: typeof import('./App')['App']
	const AntAffix: typeof import('antd')['Affix']
	const AntAlert: typeof import('antd')['Alert']
	const AntAnchor: typeof import('antd')['Anchor']
	const AntAutoComplete: typeof import('antd')['AutoComplete']
	const AntAvatar: typeof import('antd')['Avatar']
	const AntBackTop: typeof import('antd')['BackTop']
	const AntBadge: typeof import('antd')['Badge']
	const AntBreadcrumb: typeof import('antd')['Breadcrumb']
	const AntButton: typeof import('antd')['Button']
	const AntCalendar: typeof import('antd')['Calendar']
	const AntCard: typeof import('antd')['Card']
	const AntCarousel: typeof import('antd')['Carousel']
	const AntCascader: typeof import('antd')['Cascader']
	const AntCheckbox: typeof import('antd')['Checkbox']
	const AntCol: typeof import('antd')['Col']
	const AntCollapse: typeof import('antd')['Collapse']
	const AntComment: typeof import('antd')['Comment']
	const AntConfigProvider: typeof import('antd')['ConfigProvider']
	const AntDatePicker: typeof import('antd')['DatePicker']
	const AntDescriptions: typeof import('antd')['Descriptions']
	const AntDivider: typeof import('antd')['Divider']
	const AntDrawer: typeof import('antd')['Drawer']
	const AntDropdown: typeof import('antd')['Dropdown']
	const AntEmpty: typeof import('antd')['Empty']
	const AntForm: typeof import('antd')['Form']
	const AntGrid: typeof import('antd')['Grid']
	const AntImage: typeof import('antd')['Image']
	const AntInput: typeof import('antd')['Input']
	const AntInputNumber: typeof import('antd')['InputNumber']
	const AntLayout: typeof import('antd')['Layout']
	const AntList: typeof import('antd')['List']
	const AntMentions: typeof import('antd')['Mentions']
	const AntMenu: typeof import('antd')['Menu']
	const AntModal: typeof import('antd')['Modal']
	const AntPageHeader: typeof import('antd')['PageHeader']
	const AntPagination: typeof import('antd')['Pagination']
	const AntPopconfirm: typeof import('antd')['Popconfirm']
	const AntPopover: typeof import('antd')['Popover']
	const AntProgress: typeof import('antd')['Progress']
	const AntRadio: typeof import('antd')['Radio']
	const AntRate: typeof import('antd')['Rate']
	const AntResult: typeof import('antd')['Result']
	const AntRow: typeof import('antd')['Row']
	const AntSegmented: typeof import('antd')['Segmented']
	const AntSelect: typeof import('antd')['Select']
	const AntSkeleton: typeof import('antd')['Skeleton']
	const AntSlider: typeof import('antd')['Slider']
	const AntSpace: typeof import('antd')['Space']
	const AntSpin: typeof import('antd')['Spin']
	const AntStatistic: typeof import('antd')['Statistic']
	const AntSteps: typeof import('antd')['Steps']
	const AntSwitch: typeof import('antd')['Switch']
	const AntTable: typeof import('antd')['Table']
	const AntTabs: typeof import('antd')['Tabs']
	const AntTag: typeof import('antd')['Tag']
	const AntTimePicker: typeof import('antd')['TimePicker']
	const AntTimeline: typeof import('antd')['Timeline']
	const AntTooltip: typeof import('antd')['Tooltip']
	const AntTransfer: typeof import('antd')['Transfer']
	const AntTree: typeof import('antd')['Tree']
	const AntTreeSelect: typeof import('antd')['TreeSelect']
	const AntTypography: typeof import('antd')['Typography']
	const AntUpload: typeof import('antd')['Upload']
	const Affix: typeof import('antd')['Affix']
	const Alert: typeof import('antd')['Alert']
	const Anchor: typeof import('antd')['Anchor']
	const AutoComplete: typeof import('antd')['AutoComplete']
	const Avatar: typeof import('antd')['Avatar']
	const BackTop: typeof import('antd')['BackTop']
	const Badge: typeof import('antd')['Badge']
	const Breadcrumb: typeof import('antd')['Breadcrumb']
	const Button: typeof import('antd')['Button']
	const Calendar: typeof import('antd')['Calendar']
	const Card: typeof import('antd')['Card']
	const Carousel: typeof import('antd')['Carousel']
	const Cascader: typeof import('antd')['Cascader']
	const Checkbox: typeof import('antd')['Checkbox']
	const Col: typeof import('antd')['Col']
	const Collapse: typeof import('antd')['Collapse']
	const Comment: typeof import('antd')['Comment']
	const ConfigProvider: typeof import('antd')['ConfigProvider']
	const DatePicker: typeof import('antd')['DatePicker']
	const Descriptions: typeof import('antd')['Descriptions']
	const Divider: typeof import('antd')['Divider']
	const Drawer: typeof import('antd')['Drawer']
	const Dropdown: typeof import('antd')['Dropdown']
	const Empty: typeof import('antd')['Empty']
	const Form: typeof import('antd')['Form']
	const Grid: typeof import('antd')['Grid']
	const Image: typeof import('antd')['Image']
	const Input: typeof import('antd')['Input']
	const InputNumber: typeof import('antd')['InputNumber']
	const Layout: typeof import('antd')['Layout']
	const List: typeof import('antd')['List']
	const Mentions: typeof import('antd')['Mentions']
	const Menu: typeof import('antd')['Menu']
	const Modal: typeof import('antd')['Modal']
	const PageHeader: typeof import('antd')['PageHeader']
	const Pagination: typeof import('antd')['Pagination']
	const Popconfirm: typeof import('antd')['Popconfirm']
	const Popover: typeof import('antd')['Popover']
	const Progress: typeof import('antd')['Progress']
	const Radio: typeof import('antd')['Radio']
	const Rate: typeof import('antd')['Rate']
	const Result: typeof import('antd')['Result']
	const Row: typeof import('antd')['Row']
	const Segmented: typeof import('antd')['Segmented']
	const Select: typeof import('antd')['Select']
	const Skeleton: typeof import('antd')['Skeleton']
	const Slider: typeof import('antd')['Slider']
	const Space: typeof import('antd')['Space']
	const Spin: typeof import('antd')['Spin']
	const Statistic: typeof import('antd')['Statistic']
	const Steps: typeof import('antd')['Steps']
	const Switch: typeof import('antd')['Switch']
	const Table: typeof import('antd')['Table']
	const Tabs: typeof import('antd')['Tabs']
	const Tag: typeof import('antd')['Tag']
	const TimePicker: typeof import('antd')['TimePicker']
	const Timeline: typeof import('antd')['Timeline']
	const Tooltip: typeof import('antd')['Tooltip']
	const Transfer: typeof import('antd')['Transfer']
	const Tree: typeof import('antd')['Tree']
	const TreeSelect: typeof import('antd')['TreeSelect']
	const Typography: typeof import('antd')['Typography']
	const Upload: typeof import('antd')['Upload']
"
`;

exports[`ignore local components 1`] = `
"import { Progress as _unplugin_react_Progress_0 } from 'antd'
import 'antd/es/progress/style/index.css'
import { Tooltip as _unplugin_react_Tooltip_1 } from 'antd'
import 'antd/es/tooltip/style/index.css'

  import { jsxDEV as _jsxDEV } from \\"react/jsx-dev-runtime\\";
  function App() {
    return /*#__PURE__*/_jsxDEV(\\"div\\", {
      className: \\"App\\",
      children: [/*#__PURE__*/_jsxDEV(A, {
        variant: 'contained',
        children: \\"hi mui\\"
      }, void 0, false, {
        fileName: _jsxFileName,
        lineNumber: 6,
        columnNumber: 7
      }, this), /*#__PURE__*/_jsxDEV(_unplugin_react_Progress_0, {
        percent: 30
      }, void 0, false, {
        fileName: _jsxFileName,
        lineNumber: 7,
        columnNumber: 7
      }, this), /*#__PURE__*/_jsxDEV(A, {}, void 0, false, {
        fileName: _jsxFileName,
        lineNumber: 8,
        columnNumber: 7
      }, this), /*#__PURE__*/_jsxDEV(_unplugin_react_Tooltip_1, {
        title: \\"prompt text\\",
        children: /*#__PURE__*/_jsxDEV(\\"span\\", {
          children: \\"Tooltip will show on mouse enter.\\"
        }, void 0, false, {
          fileName: _jsxFileName,
          lineNumber: 10,
          columnNumber: 9
        }, this)
      }, void 0, false, {
        fileName: _jsxFileName,
        lineNumber: 9,
        columnNumber: 7
      }, this)]
    }, void 0, true, {
      fileName: _jsxFileName,
      lineNumber: 5,
      columnNumber: 5
    }, this);
  }
  _c = App;
  export default App;"
`;

exports[`it should work after bundle. 1`] = `
"import { Button as _unplugin_react_Button_0 } from 'antd'
import 'antd/es/button/style/index.css'
import { Progress as _unplugin_react_Progress_1 } from 'antd'
import 'antd/es/progress/style/index.css'
import { Skeleton as _unplugin_react_Skeleton_2 } from 'antd'
import 'antd/es/skeleton/style/index.css'
import { Tooltip as _unplugin_react_Tooltip_3 } from 'antd'
import 'antd/es/tooltip/style/index.css'
import \\"./App.css\\";
import { jsx } from \\"react/jsx-runtime\\";
import { jsxs} from \\"react/jsx-runtime\\";
function App() {
  return /* @__PURE__ */ jsxs(\\"div\\", {
    className: \\"App\\",
    children: [/* @__PURE__ */ jsx(_unplugin_react_Button_0, {
      variant: \\"contained\\",
      children: \\"hi mui\\"
    }), /* @__PURE__ */ jsx(Box, {}), /* @__PURE__ */ jsx(_unplugin_react_Progress_1, {
      percent: 30
    }), /* @__PURE__ */ jsx(_unplugin_react_Progress_1, {
      percent: 30
    }), /* @__PURE__ */ jsx(_unplugin_react_Skeleton_2, {}), /* @__PURE__ */ jsx(_unplugin_react_Tooltip_3, {
      title: \\"prompt text\\",
      children: /* @__PURE__ */ jsx(\\"span\\", {
        children: \\"Tooltip will show on mouse enter.\\"
      })
    }), /* @__PURE__ */ jsx(CompC, {})]
  });
}
export default App;
"
`;

exports[`play with resolver 1`] = `
"import { A as _unplugin_react_A_0 } from 'D:/Dev/unplugin/unplugin-react-components/test/fixtures/A.tsx'
import { Progress as _unplugin_react_Progress_1 } from 'antd'
import 'antd/es/progress/style/index.css'
import { Tooltip as _unplugin_react_Tooltip_2 } from 'antd'
import 'antd/es/tooltip/style/index.css'

  import { jsxDEV as _jsxDEV } from \\"react/jsx-dev-runtime\\";
  function App() {
    return /*#__PURE__*/_jsxDEV(\\"div\\", {
      className: \\"App\\",
      children: [/*#__PURE__*/_jsxDEV(_unplugin_react_A_0, {
        variant: 'contained',
        children: \\"hi mui\\"
      }, void 0, false, {
        fileName: _jsxFileName,
        lineNumber: 6,
        columnNumber: 7
      }, this), /*#__PURE__*/_jsxDEV(_unplugin_react_Progress_1, {
        percent: 30
      }, void 0, false, {
        fileName: _jsxFileName,
        lineNumber: 7,
        columnNumber: 7
      }, this), /*#__PURE__*/_jsxDEV(_unplugin_react_A_0, {}, void 0, false, {
        fileName: _jsxFileName,
        lineNumber: 8,
        columnNumber: 7
      }, this), /*#__PURE__*/_jsxDEV(_unplugin_react_Tooltip_2, {
        title: \\"prompt text\\",
        children: /*#__PURE__*/_jsxDEV(\\"span\\", {
          children: \\"Tooltip will show on mouse enter.\\"
        }, void 0, false, {
          fileName: _jsxFileName,
          lineNumber: 10,
          columnNumber: 9
        }, this)
      }, void 0, false, {
        fileName: _jsxFileName,
        lineNumber: 9,
        columnNumber: 7
      }, this)]
    }, void 0, true, {
      fileName: _jsxFileName,
      lineNumber: 5,
      columnNumber: 5
    }, this);
  }
  _c = App;
  export default App;"
`;
